--- a/css/styles.css
+++ b/css/styles.css
@@ -88,6 +88,7 @@ a {
     letter-spacing: 0.02em;
     color: #434455;
   }
+  
   .text-team-main {
     font-size: 36px;
     line-height: 1.11;
@@ -96,6 +97,9 @@ a {
     color: #2e2f42;
     text-transform: capitalize;
     background: #f4f4fd;
+  }
+  .team {
+    background-color: #F4F4FD
   }
 .team-list {
   background-color: #FFFFFF;
@@ -120,10 +124,11 @@ a {
   } 
   .portfolio-title-main {
     font-size: 36px;
-    line-height: 1.11111;
+    line-height: 1.11;
     letter-spacing: 0.02em;
     text-align: center;
     text-transform: capitalize;
+    color: #2e2f42;
   }
   .portfolio-item {
       background-color: #FFFFFF;
@@ -132,7 +137,7 @@ a {
   .portfolio-title {
     font-weight: 500;
     font-size: 20px;
-    line-height: 1.11;
+    line-height: 1.12;
     letter-spacing: 0.02em;
     color: #2e2f42;
   }
