--- a/css/styles.css
+++ b/css/styles.css
@@ -61,15 +61,20 @@ a {
     color: #fff;
   }
   .main-button {
-    font-family: "Roboto", sans-serif
-    font-size: 16px;
     line-height: 1.5;
+    font-size: 16px;
     font-weight: 500;
     letter-spacing: 0.04em;
-    bbackground: #4d5ae5;
+    background: #4d5ae5;
     cursor: pointer;
     color: #fff;;
+    font-family: "Roboto", sans-serif;
   }
+
+  .main-button:hover,
+  .main-button:focus {
+    background: #404bbf;
+   }
   .goals-item-title {
     font-family: "Roboto", sans-serif;
     font-weight: 500;
@@ -78,10 +83,7 @@ a {
     letter-spacing: 0.02em;
     color: #2e2f42;
   }
-  .main-button:hover,
-  .main-button:focus {
-    color:#404BBF;
-  }
+  
   .goals-item-text {
     font-size: 16px;
     line-height: 1.5;
@@ -124,7 +126,7 @@ a {
   } 
   .portfolio-title-main {
     font-size: 36px;
-    line-height: 1.11;
+    line-height: 1.2;
     letter-spacing: 0.02em;
     text-align: center;
     text-transform: capitalize;
@@ -156,8 +158,9 @@ a {
   .page-footer {
     background: #2e2f42;
   }
-.footer-logo 
- line-height: 1.17
+.footer-logo {
+  line-height: 1.17;
+}
 
 
 
