--- a/css/styles.css
+++ b/css/styles.css
@@ -116,6 +116,7 @@ a {
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
+    background-color: #FFFFFF;
   }
   .team-text {
     font-size: 16px;
@@ -126,7 +127,7 @@ a {
   } 
   .portfolio-title-main {
     font-size: 36px;
-    line-height: 1.2;
+    line-height: 1.11;
     letter-spacing: 0.02em;
     text-align: center;
     text-transform: capitalize;
@@ -139,7 +140,7 @@ a {
   .portfolio-title {
     font-weight: 500;
     font-size: 20px;
-    line-height: 1.12;
+    line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
   }
